2002-02-13  Alex Larsson  <alexl@redhat.com>

	* src/Makefile.am (install-local):
	Remove old gnome-help binary, if any.
	
2002-02-13  Alex Larsson  <alexl@redhat.com>

	* src/Makefile.am (install-local):
	Install a gnome-help symlink

2002-02-13  Mikael Hallendal  <micke@codefactory.se>
	
	* configure.in: release 0.2.1

	* reverted binary name change.

	* src/yelp-main.c (main): initiate url to empty string instead of
	  NULL. Fixed #71350
	
	* src/yelp-base.c (impl_Yelp_newWindow): check if url is empty
	  before trying to open it.

2002-02-12  Alex Larsson  <alexl@redhat.com>

	* important_docs.xml:
	* src/yelp-view-toc.c:
	Add sections to the important docs file
	Consistently call it "Manual pages" instead of "Man pages".
	Add link back to toc:man from the secondary level man page indexes.

2002-02-10  Mikael Hallendal  <micke@codefactory.se>

	* src/*.c: cleaned up includes
		
	* src/yelp-util.c (yelp_util_extract_docpath_from_uri): remove
	  warning.
	
	* src/yelp-window.c (yw_handle_url): show external URL's in
	  external viewer. #67962

2002-02-06  Alex Larsson  <alexl@redhat.com>

	* src/yelp-util.c (yelp_util_extract_docpath_from_uri):
	Correctly handle the case when gnome_vfs_uri_new() fails.

2002-01-31  Satan  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-help.desktop.in:
	* src/Makefile.am:
	* yelp.desktop.in:

	Renname stuff to "gnome-help".

	Because I'm a boring kind of guy.
	
2002-01-31  Roy-Magne Mo  <rmo@sunnmore.net>

	* configure.in: Added nn to ALL_LINGUAS.

2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2002-01-30  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: bumped version to 0.2.99

	* Release 0.2

	* src/yelp-view-toc.c (yelp_view_toc_write_header): added encoding
	  utf-8 to html header.

	* README: updated

	* configure.in: bumped version.
	
	* src/yelp-util.c: removed debug printouts.

	* src/yelp-html.c: hide debug printouts.

	* src/yelp-view-content.c: same.
